--- a/Views/Shared/TaskTableTest.cshtml
+++ b/Views/Shared/TaskTableTest.cshtml
@@ -6,7 +6,7 @@
     </colgroup>
     <tr>
         <th>Дата</th>
-        <th>Шифр</th>
+        <th>Шифр задачи</th>
         <th>Шифр проекта</th>
         <th>Задача</th>
         <th>Статус</th>
