--- a/Views/Shared/TaskCreate.cshtml
+++ b/Views/Shared/TaskCreate.cshtml
@@ -13,10 +13,10 @@
 
 
     <label>Дата</label>
-    <input name="date" id="statusId" asp-for="@Model.nullTask.date.Date" class="form-control" value="@DateTime.Now.Date" />
+    <input name="date" asp-for="@Model.nullTask.date.Date" class="form-control" value="@DateTime.Now.Date" />
 
     <label>Шифр задачи</label>
-    <input name="code" asp-for="@Model.nullTask.code" class="form-control" />
+    <input name="code" asp-for="@Model.nullTask.code" class="form-control"/>
 
     <label>Шифр проека</label>
     <select name="projectCode" asp-for="@Model.nullTask.projectCode" class="form-control">
@@ -38,41 +38,41 @@
 
 
     <label>Ответственный </label>
-    <select name="supervisor" asp-for="@Model.nullTask.supervisor" class="form-control">
-        <option value="@Model.nullTask.supervisor" selected hidden>@ViewBag.RoleName</option>
+    <select name="supervisor">
+        <option asp-for="@Model.nullTask.supervisor" selected hidden>@ViewBag.RoleName</option>
         @if (ViewBag.Role == "Директор")
         {
             @foreach (var staff in Model.staffs.Where(p => p.roleId == 5 || p.roleId == 3))
             {
-                <option>@staff.name</option>
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
             }
         }
         else if (ViewBag.Role == "ГИП")
         {
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 4 || p.roleId == 3))
+            @foreach (var staff in Model.staffs.Where(p => p.roleId == 6 || p.roleId == 3))
             {
-                <option>@staff.name</option>
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
             }
         }
         else if (ViewBag.Role == "Помощник ГИПа")
         {
             @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
             {
-                <option>@staff.name</option>
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
             }
         }
         else if (ViewBag.Role == "НО")
         {
             @foreach (var staff in Model.staffs.Where(p => p.roleId == 5 || p.roleId == 2 || p.roleId == 1))
             {
-                <option>@staff.name</option>
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
             }
         }
         else if (ViewBag.Role == "РГ")
         {
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
+            @foreach (var staff in Model.staffs.Where(p => p.roleId == 2))
             {
-                <option>@staff.name</option>
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
             }
         }
     </select>
@@ -111,7 +111,6 @@
             }
         }
     </select>
-    <input  class="form-control" />
 
 
 
